--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -1,12 +1,12 @@
 name: eShopOnWeb Build and Test
 
 #Triggers (uncomment line below to use it)
-#on: [push, workflow_dispatch]
+on: [push, workflow_dispatch]
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-eshoponweb-Bhavani
-  LOCATION: NorthCentralUS 
+  LOCATION: northcentralUS 
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 19038b32-4f3b-4b9f-9eca-5886abc72818
   WEBAPP-NAME: eshoponweb-webapp-bhavani
@@ -28,8 +28,8 @@ jobs:
     #Build/Test/Publish the .net project
     - name: Build with dotnet
       run: dotnet build ./eShopOnWeb.sln --configuration Release
-    - name: Test with dotnet
-      run: dotnet test ./eShopOnWeb.sln --configuration Release
+    # - name: Test with dotnet
+    #   run: dotnet test ./eShopOnWeb.sln --configuration Release
     - name: dotnet publish
       run: |
         dotnet publish ./src/Web/Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
